2007-01-19  Dmitry Dulepov  <dmitry@typo3.org>

	* !!! Added 'prepend' to tt_content.stdWrap in css_styled_content to display anchor to localized content elements in addition to anchor to the default language version

2007-01-19  Michael Stucki  <michael@typo3.org>

	* Reverting patch for bug #4581 which was committed by mistake. The solution works well, but it depends on 4.3.0 currently...

2007-01-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added PATH_typo3 to index_ts.php (see related change on 2006-10-29)

2007-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 4006: Load $GLOBALS['TSFE'] with image dimensions when IMG_RESOURCE is used (feature request!)

2007-01-09  Ingmar Schlecht  <ingmar@typo3.org>

	* Alphabetically sorted TS tree in TS Object Browser (Thanks to Ingo Renner)

2007-01-09  Sebastian Kurfuerst  <sebastian@typo3.org> (Thanks to Oliver Hader)

	* rewrote TBE_EDITOR Javascript functions to use JS "objects" and outsourced them to an external file
	* !!! Removed the variables TBE_EDITOR_isChanged and TBE_EDITOR_loadTime in TBE_EDITOR javascript
	* change in getRecordTitle: a too long title is wrapped in a <span title="..."> tag to show a tooltip

2007-01-03  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fixed bug 931: Typolink to a page with certain type doesn't work if type is zero

2007-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bugs 3254, 3872, 4345: hide workspace selector if (1) no access to workspace module, or (2) only one workspace is available to user
	* Fixed: publishing many records may cause PHP timeout and leave workspace in half-published state

2006-12-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed garbage characters in typo3/init.php

2006-12-21  Dmitry Dulepov  <dmitry@typo3.org>

	* List module did not use BACK_PATH in many calls to TYPO3 functions, which made imposible to reuse List module classes in extensions

2006-12-20  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1beta2
